### Added  - MGチケット決済追加

--- a/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-ttl">券種選択</h1>
     <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 
-    <div *ngIf="purchase.isUsedMovieTicket({ ticketType: movieTicketType.MovieTicket }) && purchase.data.mvtkTickets.length === 0"
+    <div *ngIf="purchase.isUsedMovieTicket({ paymentMethodType: movieTicketType.MovieTicket }) && purchase.data.movieTickets.length === 0"
         class="box radius bg-ultra-light-gray mb-middle mvtk">
         <dl class="d-table">
             <dt class="d-td">ムビチケ券を利用される方</dt>
@@ -92,7 +92,7 @@
 
 <app-modal [open]="ticketsModal" [layout]="false" (close)="ticketsModal = false">
     <ul inner class="not-layout box bg-light-gray">
-        <li *ngFor="let ticket of salesMvtkTickets" [class.disabled]="ticket.selected">
+        <li *ngFor="let ticket of salesMovieTickets" [class.disabled]="ticket.selected">
             <dl class="d-table">
                 <dt class="d-td">
                     <div class="mb-xx-small">
@@ -101,23 +101,6 @@
                         </strong>
                     </div>
                     <p class="small-x-text">ムビチケ購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}</p>
-                </dt>
-                <dd class="d-td width-small">
-                    <div class="button blue-button ticket-type-select">
-                        <button type="button" (click)="selectMovieTicket(ticket)">選択</button>
-                    </div>
-                </dd>
-            </dl>
-        </li>
-        <li *ngFor="let ticket of salesMGTickets" [class.disabled]="ticket.selected">
-            <dl class="d-table">
-                <dt class="d-td">
-                    <div class="mb-xx-small">
-                        <strong>
-                            {{ ticket.ticketName }} ￥{{ getSalseTicketPrice(ticket) }}
-                        </strong>
-                    </div>
-                    <p class="small-x-text">MGチケット購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}</p>
                 </dt>
                 <dd class="d-td width-small">
                     <div class="button blue-button ticket-type-select">
