### Added  - MGチケット決済追加

--- a/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.html
@@ -6,7 +6,7 @@
     </p>
     <ul class="box radius bg-light-gray mb-middle mvtk-lists">
 
-        <li *ngFor="let ticket of purchase.data.movieTickets">
+        <li *ngFor="let ticket of tickets">
             <dl class="d-table">
                 <dt class="d-td">MGチケット購入番号 {{ ticket.input.knyknrNo }}</dt>
                 <dd class="d-td width-medium">
