--- a/src/client/app/modules/purchase/components/pages/purchase-mg-input/purchase-mg-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-mg-input/purchase-mg-input.component.html
@@ -15,12 +15,12 @@
                             <dt>MGチケット購入番号</dt>
                             <dd>
                                 <input class="mvtk-code" [class.validation]="mvtkForm.controls.code.invalid && mvtkForm.controls.code.touched" type="text" formControlName="code"
-                                    autocomplete="off" placeholder="(例)012345789" maxlength="10">
+                                    autocomplete="off" placeholder="(例)012345789">
                                 <div *ngIf="mvtkForm.controls.code.invalid && mvtkForm.controls.code.touched">
                                     <div *ngIf="mvtkForm.controls.code.errors?.required" class="validation-text">MGチケット購入番号が未入力です</div>
                                     <div *ngIf="mvtkForm.controls.code.errors?.maxlength" class="validation-text">MGチケット購入番号は{{ mvtkForm.controls.code.errors?.maxlength.requiredLength }}文字で入力してください</div>
                                     <div *ngIf="mvtkForm.controls.code.errors?.minlength" class="validation-text">MGチケット購入番号は{{ mvtkForm.controls.code.errors?.minlength.requiredLength }}文字で入力してください</div>
-                                    <div *ngIf="mvtkForm.controls.code.errors?.pattern" class="validation-text">MGチケット購入番号は数字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.code.errors?.pattern" class="validation-text">MGチケット購入番号は英数字で入力してください</div>
                                 </div>
                             </dd>
                         </dl>
@@ -30,7 +30,7 @@
                             <dt>MGチケット暗証番号</dt>
                             <dd>
                                 <input [class.validation]="mvtkForm.controls.password.invalid && mvtkForm.controls.password.touched" type="password"
-                                    formControlName="password" autocomplete="off" placeholder="(例)0123" maxlength="4">
+                                    formControlName="password" autocomplete="off" placeholder="(例)0123" >
                                 <div *ngIf="mvtkForm.controls.password.invalid && mvtkForm.controls.password.touched">
                                     <div *ngIf="mvtkForm.controls.password.errors?.required" class="validation-text">MGチケット暗証番号が未入力です</div>
                                     <div *ngIf="mvtkForm.controls.password.errors?.maxlength" class="validation-text">MGチケット暗証番号は{{ mvtkForm.controls.password.errors?.maxlength.requiredLength }}文字で入力してください</div>
