--- a/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-ttl">券種選択</h1>
     <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 
-    <div *ngIf="purchase.isUsedMovieTicket({ paymentMethodType: movieTicketType.MovieTicket }) && purchase.data.movieTickets.length === 0"
+    <div *ngIf="purchase.isUsedMovieTicket({ paymentMethodType: paymentMethodType.MovieTicket })"
         class="box radius bg-ultra-light-gray mb-middle mvtk">
         <dl class="d-table">
             <dt class="d-td">ムビチケ券を利用される方</dt>
@@ -15,7 +15,7 @@
             </dd>
         </dl>
     </div>
-    <!-- <div *ngIf="purchase.isUsedMovieTicket({ ticketType: movieTicketType.MGTicket }) && purchase.data.mgTickets.length === 0"
+    <div *ngIf="purchase.isUsedMovieTicket({ paymentMethodType: paymentMethodType.MGTicket })"
         class="box radius bg-ultra-light-gray mb-middle mg">
         <dl class="d-table">
             <dt class="d-td">MGチケットを利用される方</dt>
@@ -27,7 +27,7 @@
                 </div>
             </dd>
         </dl>
-    </div> -->
+    </div>
 
     <div *ngIf="user.isMember() && purchase.isUsedPoint() && purchase.data.pointTickets.length === 0"
         class="box radius bg-ultra-light-gray mb-middle point">
@@ -100,7 +100,12 @@
                             {{ ticket.ticketName }} ￥{{ getSalseTicketPrice(ticket) }}
                         </strong>
                     </div>
-                    <p class="small-x-text">ムビチケ購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}</p>
+                    <p *ngIf="ticket.paymentMethodType === paymentMethodType.MovieTicket" class="small-x-text">
+                        ムビチケ購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}
+                    </p>
+                    <p *ngIf="ticket.paymentMethodType === paymentMethodType.MGTicket" class="small-x-text">
+                        MGチケット購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}
+                    </p>
                 </dt>
                 <dd class="d-td width-small">
                     <div class="button blue-button ticket-type-select">
