--- a/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.html
@@ -1,14 +1,14 @@
 <div class="contents">
-    <h1 class="page-ttl">MGチケット適用内容確認</h1>
+    <h1 class="page-ttl">CSチケット適用内容確認</h1>
     <p class="read">内容に問題なければ「券種選択へ戻る」ボタンを押してください。
         <br>
-        <span class="small-text">※券種選択よりMGチケットを選択してください。</span>
+        <span class="small-text">※券種選択よりCSチケットを選択してください。</span>
     </p>
     <ul class="box radius bg-light-gray mb-middle mvtk-lists">
 
         <li *ngFor="let ticket of tickets">
             <dl class="d-table">
-                <dt class="d-td">MGチケット購入番号 {{ ticket.input.knyknrNo }}</dt>
+                <dt class="d-td">CSチケット購入番号 {{ ticket.input.knyknrNo }}</dt>
                 <dd class="d-td width-medium">
                     <strong>{{ ticket.ticketcodeResult.ticketName }} × {{ ticket.ykknInfo.ykknKnshbtsmiNum }}</strong>
                 </dd>
