### Changed  - 不要なサーバーサイドレンダリングを廃止  -  WEBSITE_TIME_ZONE廃止

--- a/views/method/ticketing.ejs
+++ b/views/method/ticketing.ejs
@@ -3,29 +3,29 @@
 
 <%- contentFor('body') %>
 <div class="method-ticketing">
-    <h1 class="page-ttl"><%- __('method.ticketing.pageTitle') %></h1>
-    <p class="read"><%- __('method.ticketing.read') %></p>
+    <h1 class="page-ttl">劇場発券機の発券方法</h1>
+    <p class="read">劇場に設置されている発券機の発券方法は下記になります。</p>
 
     <ol>
         <li class="mb-large">
-            <h2 class="section-ttl"><%- __('method.ticketing.step01.title') %></h2>
-            <p class="mb-middle"><%- __('method.ticketing.step01.read') %></p>
+            <h2 class="section-ttl">1. 劇場内に発券機が設置されています。</h2>
+            <p class="mb-middle">鑑賞する劇場内にチケット発券機が設置されています。</p>
             <div class="image"><img src="/images/method/ticketing/ticketing_01.svg" alt=""></div>
         </li>
         <li class="mb-large">
-            <h2 class="section-ttl"><%- __('method.ticketing.step02.title') %></h2>
-            <p class="mb-middle"><%- __('method.ticketing.step02.read') %></p>
+            <h2 class="section-ttl">2.発券手続きをしてください。</h2>
+            <p class="mb-middle">発券機の指示に従い、発券手続きを進めてください。<br>その際、チケット購入時の予約番号と電話番号をご用意ください。</p>
             <div class="image"><img src="/images/method/ticketing/ticketing_02.svg" alt=""></div>
         </li>
         <li class="mb-large">
-            <h2 class="section-ttl"><%- __('method.ticketing.step03.title') %></h2>
-            <p class="mb-middle"><%- __('method.ticketing.step03.read') %></p>
+            <h2 class="section-ttl">3.発券したチケットで入場してください。</h2>
+            <p class="mb-middle">手続きが完了するとチケットが発券されます。<br>発券したチケットを入場口スタッフにご提示して入場してください。</p>
             <div class="image"><img src="/images/method/ticketing/ticketing_03.svg" alt=""></div>
         </li>
     </ol>
 
 
     <div class="button-area clearfix">
-        <div class="close-link"><a class="icon-close-black window-close" href="#"><%- __('common.close') %></a></div>
+        <div class="close-link"><a class="icon-close-black window-close" href="#">閉じる</a></div>
     </div>
 </div>
