--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,9 +1,9 @@
 <head>
 <%- include tags/head %>
 <meta charset="utf-8">
-<title><%- __('meta.title') %></title>
-<meta name="description" content="<%- __('meta.description') %>">
-<meta name="keywords" content="<%- __('meta.keywords') %>">
+<title>シネマサンシャイン／チケット予約</title>
+<meta name="description" content="シネマサンシャインオンラインチケット。簡単操作でチケット購入をしていただけます。">
+<meta name="keywords" content="シネマサンシャイン,映画,シネマ,チケット購入">
 <meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
 <meta name="format-detection" content="telephone=no">
 <meta name="robots" content="noindex">
