### Changed  - 利用規約変更

--- a/src/client/app/modules/purchase/components/parts/purchase-term/purchase-term.component.html
+++ b/src/client/app/modules/purchase/components/parts/purchase-term/purchase-term.component.html
@@ -42,7 +42,9 @@
         <br>・ 本サービスはシステムメンテナンスによるサービス提供の中断及び第2条で定める場合をのぞき、24時間営業を行っております。メンテナンスを行う際は事前に当サイトにて告知しますが、第2条で定める通りやむをえない場合は事前の通告無しにサービスを中断します。
         <br>・ 本サービスは当社規定の料金体系に基づくことを前提とします。尚、対象券種は当社が決定するものとし、お客様への事前の通告なしに変更できるものとします。
         <br>　 ※各種証明書のご提示が必要な券種は、ご鑑賞当日、入場口にて確認させて頂きます。詳しくは第7条でご確認ください。
-        <br>・ ご予約の受付はご鑑賞日2日前から上映開始時間までです。1回の購入申込みで購入出来る枚数に制限が付きます。制限枚数は、その都度変更されます。制限枚数以上購入の場合は複数の購入操作が必要となります。複数の購入申込みを行った場合、座席は購入操作ごとで離れたお席になります。
+        <br>・ ご予約の受付はご鑑賞日2日前0：00から上映開始時間までです。1回の購入申込みで購入出来る枚数に制限が付きます。制限枚数は、その都度変更されます。制限枚数以上購入の場合は複数の購入操作が必要となります。複数の購入申込みを行った場合、座席は購入操作ごとで離れたお席になります。
+        <br>　 ※リワード会員の受付はご鑑賞日3日前21：00から早期購入可能です。
+        <br>　 ※販売開始日時は、一部作品・上映により異なる場合がございます。
         <br>・ 映画倫理規定管理委員会の定めたレイティング(鑑賞年齢制限)の定められた作品では該当のお客様のご利用をお断りすることがあります。制限年齢に達しないお客様が誤って購入したチケットの返金・交換は一切受付けておりません。
         <br>・ {{ ordinance }}の定めにより、18歳未満及び高校生の方は終映が{{ limit }}を過ぎる上映回のチケットをご購入頂けません。また保護者同伴でもご入場頂けません。
         <br>・ 本サービスにおける売買契約の成立は、入力頂いた内容に基づきクレジット決済与信手続が終了した時点とします。発券の際には本サービス発行の「予約番号」、お客様入力の「電話番号」が必要となります。
