--- a/src/client/app/components/app/app.component.html
+++ b/src/client/app/components/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="wrapper" [class.ticket-app]="user.isNative()" [class.member]="user.isMember()">
+<div class="wrapper mx-auto py-md-4 px-md-3 p-2" [class.ticket-app]="user.isNative()" [class.member]="user.isMember()">
     <router-outlet></router-outlet>
 </div>
