--- a/src/client/app/modules/error/pages/not-found/not-found.component.html
+++ b/src/client/app/modules/error/pages/not-found/not-found.component.html
@@ -1,6 +1,6 @@
-<div class="contents">
-    <h1 class="page-ttl">エラーが発生しました</h1>
-    <p class="read">お手続きの途中でエラーが発生いたしました。
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3">エラーが発生しました</h1>
+    <p class="text-left text-md-center">お手続きの途中でエラーが発生いたしました。
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
     <div class="button-area">
         <div class="prev-link">
