--- a/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.html
@@ -1,10 +1,10 @@
-<div class="contents">
-    <h1 class="page-ttl">CSチケット適用内容確認</h1>
-    <p class="read">内容に問題なければ「券種選択へ戻る」ボタンを押してください。
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3">CSチケット適用内容確認</h1>
+    <p class="text-left text-md-center">内容に問題なければ「券種選択へ戻る」ボタンを押してください。
         <br>
-        <span class="small-text">※券種選択よりCSチケットを選択してください。</span>
+        <span class="text-small">※券種選択よりCSチケットを選択してください。</span>
     </p>
-    <ul class="box radius bg-light-gray mb-middle mvtk-lists">
+    <ul class="p-3 rounded bg-light-gray mb-3 mvtk-lists">
 
         <li *ngFor="let ticket of tickets">
             <dl class="d-table">
