--- a/src/client/app/modules/purchase/components/pages/purchase-overlap/purchase-overlap.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-overlap/purchase-overlap.component.html
@@ -1,12 +1,12 @@
-<div class="contents">
-    <h1 class="page-ttl red-text">仮予約の座席があります</h1>
-    <p class="read">現在、仮予約の座席があります。
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3 text-danger">仮予約の座席があります</h1>
+    <p class="text-left text-md-center">現在、仮予約の座席があります。
         <br>仮予約の座席の購入を進めるか、新しく選択した内容で購入を進めるか選択してください。
         <br>仮予約の内容は下記になります。</p>
 
-    <div class="form-layout mb-x-large">
-        <h2 class="section-ttl">仮予約の上映スケジュール</h2>
-        <ul class="box radius bg-light-gray mb-large">
+    <div class="form-layout mb-4">
+        <h2 class="mb-2 font-weight-bold">仮予約の上映スケジュール</h2>
+        <ul class="p-3 rounded bg-light-gray mb-4">
             <li>
                 <dl>
                     <dt>劇場 / スクリーン</dt>
@@ -35,8 +35,8 @@
     </div>
 
     <div class="form-layout">
-        <h2 class="section-ttl">新しく選択した上映スケジュール</h2>
-        <ul class="box radius bg-light-gray mb-large">
+        <h2 class="mb-2 font-weight-bold">新しく選択した上映スケジュール</h2>
+        <ul class="p-3 rounded bg-light-gray mb-4">
             <li>
                 <dl>
                     <dt>劇場 / スクリーン</dt>
