--- a/src/client/app/modules/purchase/components/parts/purchase-film-order/purchase-film-order.component.html
+++ b/src/client/app/modules/purchase/components/parts/purchase-film-order/purchase-film-order.component.html
@@ -4,7 +4,7 @@
             <div class="mb-x-small">
                 <strong>{{ title }}</strong>
             </div>
-            <div class="small-text">{{ duration | duration: 'minutes' }}分</div>
+            <div class="text-small">{{ duration | duration: 'minutes' }}分</div>
         </dt>
         <dd>
             <ul>
