--- a/src/client/app/modules/purchase/components/parts/purchase-term/purchase-term.component.html
+++ b/src/client/app/modules/purchase/components/parts/purchase-term/purchase-term.component.html
@@ -1,4 +1,4 @@
-<div class="box bg-ultra-light-gray term small-x-text">
+<div class="p-3 bg-light-gray term text-small scroll-vertical">
     <p>
         【オンライン利用規約】
         <br>
