--- a/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.html
+++ b/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.html
@@ -1,16 +1,16 @@
-<div class="seat-info" [class.screen-4dx]="type === '002' || type === '004'">
-    <div class="box radius bg-white">
-        <div class="seat">
-            <strong>空席</strong>
+<div class="seat-info px-3 pb-2 pb-md-3" [class.screen-4dx]="type === '002' || type === '004'">
+    <div class="px-3 py-2 py-md-3 rounded bg-white d-flex justify-content-center">
+        <div class="seat font-weight-bold">
+            空席
         </div>
-        <div class="seat active">
-            <strong>選択中</strong>
+        <div class="seat active font-weight-bold">
+            選択中
         </div>
-        <div class="seat disabled">
-            <strong>販売済み</strong>
+        <div class="seat disabled font-weight-bold">
+            販売済み
         </div>
-        <div class="seat space">
-            <strong>選択不可</strong>
+        <div class="seat space font-weight-bold">
+            選択不可
         </div>
     </div>
 </div>
