--- a/src/client/app/modules/shared/components/parts/header/header.component.html
+++ b/src/client/app/modules/shared/components/parts/header/header.component.html
@@ -5,8 +5,8 @@
         </a>
     </div>
 </header>
-<header class="header clearfix ticket-app-hide">
-    <div class="inner">
+<header class="header bg-white border-bottom border-light-gray rounded-top px-3 py-2 px-md-5 py-md-4 clearfix ticket-app-hide">
+    <div class="position-relative">
         <div class="logo">
             <a href="{{ environment.PORTAL_SITE_URL }}">
                 <img src="/assets/images/common/logo.svg" alt="">
