--- a/src/client/app/modules/shared/components/parts/modal/modal.component.html
+++ b/src/client/app/modules/shared/components/parts/modal/modal.component.html
@@ -3,8 +3,8 @@
     <div class="modal position-center">
         <div class="inner">
             <div *ngIf="layout">
-                <div class="box bg-white">
-                    <div class="modal-body mb-middle">
+                <div class="p-3 bg-white">
+                    <div class="modal-body mb-3">
                         <ng-content></ng-content>
                     </div>
                     <div class="prev-link">
