--- a/src/client/app/modules/shared/components/parts/screen/screen.component.scss
+++ b/src/client/app/modules/shared/components/parts/screen/screen.component.scss
@@ -16,6 +16,7 @@ $mobile: 767px;
         position: absolute;
         text-align: center;
         a {
+            cursor: pointer;
             font-weight: bold;
             display: block;
             color: #9a9a9b;
