--- a/src/client/app/modules/test/pages/test-screen/test-screen.component.html
+++ b/src/client/app/modules/test/pages/test-screen/test-screen.component.html
@@ -1,4 +1,4 @@
-<div class="mb-middle">
+<div class="mb-3">
     <app-screen *ngIf="screenData" [screenConfig]="screenData.screenConfig" [screen]="screenData.screen" [status]="screenData.status"></app-screen>
 </div>
 
