--- a/src/client/app/modules/purchase/components/pages/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-confirm/purchase-confirm.component.html
@@ -1,11 +1,11 @@
-<div class="contents">
-    <h1 class="page-ttl">購入内容確認</h1>
-    <p class="read">
-        <strong class="large-text red-text">まだ購入は完了していません。</strong>
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3">購入内容確認</h1>
+    <p class="text-left text-md-center">
+        <strong class="text-large text-danger">まだ購入は完了していません。</strong>
         <br>ご購入内容をご確認頂き「購入完了」ボタンを押して購入を確定してください。</p>
 
     <div class="form-layout">
-        <h2 class="section-ttl">
+        <h2 class="mb-2 font-weight-bold">
             作品情報
             <div class="right ticket-app-hide">
                 <div class="button light-gray-button change-button">
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </h2>
-        <ul class="box radius bg-light-gray mb-large">
+        <ul class="p-3 rounded bg-light-gray mb-4">
             <li>
                 <dl>
                     <dt>劇場 / スクリーン</dt>
@@ -36,11 +36,11 @@
                     <dt>鑑賞日時</dt>
                     <dd>
                         <div class="mb-xx-small">
-                            <strong class="red-text">
+                            <strong class="text-danger">
                                 {{ purchase.getAppreciationDate() }} {{ purchase.getStartDate() }} - {{ purchase.getEndDate() }}
                             </strong>
                         </div>
-                        <p class="small-x-text red-text">※鑑賞日時を必ずご確認ください。</p>
+                        <p class="text-small text-danger">※鑑賞日時を必ずご確認ください。</p>
                     </dd>
                 </dl>
             </li>
@@ -58,13 +58,13 @@
                 <dl>
                     <dt>獲得ポイント</dt>
                     <dd>
-                        <strong class="red-text">0ポイント</strong>
+                        <strong class="text-danger">0ポイント</strong>
                     </dd>
                 </dl>
             </li> -->
         </ul>
 
-        <h2 class="section-ttl">
+        <h2 class="mb-2 font-weight-bold">
             購入情報
             <div class="right">
                 <div class="button light-gray-button change-button">
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </h2>
-        <ul class="box radius bg-light-gray mb-large">
+        <ul class="p-3 rounded bg-light-gray mb-4">
             <li>
                 <dl>
                     <dt>お名前（カタカナ）</dt>
@@ -102,24 +102,24 @@
 
         </ul>
 
-        <h2 class="section-ttl">注意事項(重要)</h2>
-        <p class="mb-small">下記項目をご確認いただきチェックを入れて「購入完了」ボタンを押してください。</p>
+        <h2 class="mb-2 font-weight-bold">注意事項(重要)</h2>
+        <p class="mb-2">下記項目をご確認いただきチェックを入れて「購入完了」ボタンを押してください。</p>
         
-        <app-purchase-note class="mb-middle" [theaterCode]="purchase.data.screeningEvent?.superEvent.location.branchCode.slice(-2)"></app-purchase-note>
+        <app-purchase-note class="mb-3" [theaterCode]="purchase.data.screeningEvent?.superEvent.location.branchCode.slice(-2)"></app-purchase-note>
 
 
-        <p class="mb-small small-text text-white" style="background-color: red; padding: 10px;">
+        <p class="mb-2 text-small text-white" style="background-color: red; padding: 10px;">
             ※新型コロナウイルス感染症予防のため、全てのご来場のお客様にマスクの着用をお願いしております。<br>
             マスク未着用のお客様は入場をお断りさせていただきます。
         </p>
         <form [formGroup]="confirmForm" (ngSubmit)="onSubmit()">
-            <div class="mb-x-large text-center">
+            <div class="mb-4 text-center">
                 <input type="checkbox" formControlName="notes" id="notes">
                 <label for="notes">
                     <strong>上記内容に同意する</strong>
                 </label>
                 <div *ngIf="confirmForm.controls['notes'].invalid && (confirmForm.controls['notes'].dirty || confirmForm.controls['notes'].touched)"
-                    class="validation-text">注意事項に同意してください</div>
+                    class="text-danger">注意事項に同意してください</div>
             </div>
             <app-buttons [disabled]="isLoading" nextLabel="購入完了" prevLabel="戻る" prevLink="/purchase/input"></app-buttons>
         </form>
