--- a/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
@@ -1,12 +1,12 @@
-<div class="contents">
-    <h1 class="page-ttl">購入者情報入力</h1>
-    <p class="read">必須項目を入力し「次へ」ボタンを押してください。</p>
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3">購入者情報入力</h1>
+    <p class="text-left text-md-center">必須項目を入力し「次へ」ボタンを押してください。</p>
 
     <form [formGroup]="inputForm" (ngSubmit)="onSubmit()">
-        <h2 class="section-ttl">お名前（カタカナ）
-            <span class="text-icon-red small-x-text">入力必須</span>
+        <h2 class="mb-2 font-weight-bold">お名前（カタカナ）
+            <span class="text-icon-red text-small">入力必須</span>
         </h2>
-        <div class="box radius bg-light-gray mb-large">
+        <div class="p-3 rounded bg-light-gray mb-4">
             <div class="column-02">
                 <dl>
                     <dt>セイ</dt>
@@ -16,12 +16,12 @@
                             type="text" formControlName="familyName" autocomplete="family-name" placeholder="(例)シネマ">
                         <div
                             *ngIf="inputForm.controls.familyName.invalid && inputForm.controls.familyName.touched">
-                            <div *ngIf="inputForm.controls.familyName.errors?.required" class="validation-text">
+                            <div *ngIf="inputForm.controls.familyName.errors?.required" class="text-danger">
                                 セイが未入力です</div>
-                            <div *ngIf="inputForm.controls.familyName.errors?.maxlength" class="validation-text">
+                            <div *ngIf="inputForm.controls.familyName.errors?.maxlength" class="text-danger">
                                 セイは{{ inputForm.controls.familyName.errors?.maxlength.requiredLength }}文字以下で入力してください
                             </div>
-                            <div *ngIf="inputForm.controls.familyName.errors?.pattern" class="validation-text">
+                            <div *ngIf="inputForm.controls.familyName.errors?.pattern" class="text-danger">
                                 セイは全角カタカナで入力してください</div>
                         </div>
                     </dd>
@@ -33,22 +33,22 @@
                             [class.validation]="inputForm.controls.givenName.invalid && inputForm.controls.givenName.touched"
                             type="text" formControlName="givenName" autocomplete="given-name" placeholder="(例)タロウ">
                         <div *ngIf="inputForm.controls.givenName.invalid && inputForm.controls.givenName.touched">
-                            <div *ngIf="inputForm.controls.givenName.errors?.required" class="validation-text">
+                            <div *ngIf="inputForm.controls.givenName.errors?.required" class="text-danger">
                                 メイが未入力です</div>
-                            <div *ngIf="inputForm.controls.givenName.errors?.maxlength" class="validation-text">
+                            <div *ngIf="inputForm.controls.givenName.errors?.maxlength" class="text-danger">
                                 メイは{{ inputForm.controls.givenName.errors?.maxlength.requiredLength }}文字以下で入力してください
                             </div>
-                            <div *ngIf="inputForm.controls.givenName.errors?.pattern" class="validation-text">
+                            <div *ngIf="inputForm.controls.givenName.errors?.pattern" class="text-danger">
                                 メイは全角カタカナで入力してください</div>
                         </div>
                     </dd>
                 </dl>
             </div>
         </div>
-        <h2 class="section-ttl">メールアドレス
-            <span class="text-icon-red small-x-text">入力必須</span>
+        <h2 class="mb-2 font-weight-bold">メールアドレス
+            <span class="text-icon-red text-small">入力必須</span>
         </h2>
-        <div class="box radius bg-light-gray mb-large">
+        <div class="p-3 rounded bg-light-gray mb-4">
             <dl>
                 <dd>
                     <input
@@ -56,11 +56,11 @@
                         type="email" formControlName="email" autocomplete="email"
                         placeholder="(例)cinema@cinemasunshine.co.jp">
                     <div *ngIf="inputForm.controls.email.invalid && inputForm.controls.email.touched">
-                        <div *ngIf="inputForm.controls.email.errors?.required" class="validation-text">メールアドレスが未入力です
+                        <div *ngIf="inputForm.controls.email.errors?.required" class="text-danger">メールアドレスが未入力です
                         </div>
-                        <div *ngIf="inputForm.controls.email.errors?.maxlength" class="validation-text">
+                        <div *ngIf="inputForm.controls.email.errors?.maxlength" class="text-danger">
                             メールアドレスは{{ inputForm.controls.email.errors?.maxlength.requiredLength }}文字以下で入力してください</div>
-                        <div *ngIf="inputForm.controls.email.errors?.email" class="validation-text">メールアドレスが正しくありません
+                        <div *ngIf="inputForm.controls.email.errors?.email" class="text-danger">メールアドレスが正しくありません
                         </div>
                     </div>
                 </dd>
@@ -73,18 +73,18 @@
                         type="email" formControlName="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp">
                     <div
                         *ngIf="inputForm.controls.emailConfirm.invalid && inputForm.controls.emailConfirm.touched">
-                        <div *ngIf="inputForm.controls.emailConfirm.errors?.required" class="validation-text">
+                        <div *ngIf="inputForm.controls.emailConfirm.errors?.required" class="text-danger">
                             メールアドレス確認が未入力です</div>
-                        <div *ngIf="inputForm.controls.emailConfirm.errors?.maxlength" class="validation-text">
+                        <div *ngIf="inputForm.controls.emailConfirm.errors?.maxlength" class="text-danger">
                             メールアドレス確認は{{ inputForm.controls.emailConfirm.errors?.maxlength.requiredLength }}文字以下で入力してください
                         </div>
-                        <div *ngIf="inputForm.controls.emailConfirm.errors?.email" class="validation-text">
+                        <div *ngIf="inputForm.controls.emailConfirm.errors?.email" class="text-danger">
                             メールアドレス確認が正しくありません</div>
                     </div>
                     <div *ngIf="inputForm.controls.email.touched && inputForm.controls.emailConfirm.touched && (inputForm.controls.email.value !== inputForm.controls.emailConfirm.value)"
-                        class="validation-text">
+                        class="text-danger">
                         メールアドレス確認が一致しません</div>
-                    <p class="small-x-text">
+                    <p class="text-small">
                         <strong>【ドメイン指定受信をご利用の場合について】</strong>
                         <br>※ 携帯電話のドメイン指定受信をされている場合、「@ticket-cinemasunshine.com」を追加設定してください。
                         <br>※ au(@ezweb.ne.jp)をご利用の場合、上記に加え「なりすまし規制回避リスト」にも「@ticket-cinemasunshine.com」の追加設定をしてください。</p>
@@ -92,50 +92,50 @@
             </dl>
         </div>
 
-        <h2 class="section-ttl">電話番号
-            <span class="text-icon-red small-x-text">入力必須</span>
+        <h2 class="mb-2 font-weight-bold">電話番号
+            <span class="text-icon-red text-small">入力必須</span>
         </h2>
-        <div class="box radius bg-light-gray mb-large">
+        <div class="p-3 rounded bg-light-gray mb-4">
             <dl>
                 <dd>
                     <input
                         [class.validation]="inputForm.controls.telephone.invalid && inputForm.controls.telephone.touched"
                         type="tel" formControlName="telephone" autocomplete="tel" placeholder="(例)08000000000">
                     <div *ngIf="inputForm.controls.telephone.invalid && inputForm.controls.telephone.touched">
-                        <div *ngIf="inputForm.controls.telephone.errors?.required" class="validation-text">電話番号が未入力です
+                        <div *ngIf="inputForm.controls.telephone.errors?.required" class="text-danger">電話番号が未入力です
                         </div>
-                        <div *ngIf="inputForm.controls.telephone.errors?.minlength" class="validation-text">
+                        <div *ngIf="inputForm.controls.telephone.errors?.minlength" class="text-danger">
                             電話番号は{{ inputForm.controls.telephone.errors?.minlength.requiredLength }}文字以上で入力してください
                         </div>
-                        <div *ngIf="inputForm.controls.telephone.errors?.maxlength" class="validation-text">
+                        <div *ngIf="inputForm.controls.telephone.errors?.maxlength" class="text-danger">
                             電話番号は{{ inputForm.controls.telephone.errors?.maxlength.requiredLength }}文字以下で入力してください
                         </div>
-                        <div *ngIf="inputForm.controls.telephone.errors?.pattern" class="validation-text">
+                        <div *ngIf="inputForm.controls.telephone.errors?.pattern" class="text-danger">
                             電話番号は数字で入力してください</div>
-                        <div *ngIf="inputForm.controls.telephone.errors?.telephone" class="validation-text">
+                        <div *ngIf="inputForm.controls.telephone.errors?.telephone" class="text-danger">
                             電話番号が正しくありません</div>
                     </div>
-                    <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
+                    <p class="text-small">※半角数字、ハイフン「-」なしで入力してください</p>
                 </dd>
             </dl>
         </div>
 
         <div *ngIf="purchase.getTotalPrice() > 0">
-            <h2 class="section-ttl">
+            <h2 class="mb-2 font-weight-bold">
                 お支払情報
-                <span class="text-icon-red small-x-text">入力必須</span>
+                <span class="text-icon-red text-small">入力必須</span>
                 <span class="image credit-image">
                     <img src="/assets/images/common/credit_card.png" alt="">
                 </span>
             </h2>
 
-            <p class="mb-small">クレジットカード決済の必要事項を入力ください。</p>
-            <div *ngIf="creditCardType === 'input'" class="credit-input mb-small">
-                <ul class="box radius bg-light-gray mb-large credit form-layout">
+            <p class="mb-2">クレジットカード決済の必要事項を入力ください。</p>
+            <div *ngIf="creditCardType === 'input'" class="credit-input mb-2">
+                <ul class="p-3 rounded bg-light-gray mb-4 credit form-layout">
                     <li class="price">
                         <dl>
                             <dt>ご利用金額</dt>
-                            <dd class="large-text red-text">
+                            <dd class="text-large text-danger">
                                 <strong>￥{{ purchase.getTotalPrice() }}</strong>
                             </dd>
                         </dl>
@@ -151,11 +151,11 @@
                                 <div
                                     *ngIf="inputForm.controls.cardNumber.invalid && inputForm.controls.cardNumber.touched">
                                     <div *ngIf="inputForm.controls.cardNumber.errors?.required"
-                                        class="validation-text">カード番号が未入力です</div>
+                                        class="text-danger">カード番号が未入力です</div>
                                     <div *ngIf="inputForm.controls.cardNumber.errors?.pattern"
-                                        class="validation-text">カード番号は数字で入力してください</div>
+                                        class="text-danger">カード番号は数字で入力してください</div>
                                 </div>
-                                <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
+                                <p class="text-small">※半角数字、ハイフン「-」なしで入力してください</p>
                             </dd>
                         </dl>
                     </li>
@@ -190,7 +190,7 @@
                                 <div
                                     *ngIf="inputForm.controls.securityCode.invalid && inputForm.controls.securityCode.touched">
                                     <div *ngIf="inputForm.controls.securityCode.errors?.required"
-                                        class="validation-text">セキュリティーコードが未入力です</div>
+                                        class="text-danger">セキュリティーコードが未入力です</div>
                                 </div>
                                 <p>
                                     <a (click)="securityCodeModal = true">セキュリティーコードについて</a>
@@ -209,14 +209,14 @@
                                 <div
                                     *ngIf="inputForm.controls.holderName.invalid && inputForm.controls.holderName.touched">
                                     <div *ngIf="inputForm.controls.holderName.errors?.required"
-                                        class="validation-text">カード名義人が未入力です</div>
+                                        class="text-danger">カード名義人が未入力です</div>
                                 </div>
                             </dd>
                         </dl>
                     </li>
                 </ul>
 
-                <div *ngIf="user.isMember()" class="text-center mb-middle">
+                <div *ngIf="user.isMember()" class="text-center mb-3">
                     <input type="checkbox" formControlName="saveCreditCard" id="saveCreditCard">
                     <label for="saveCreditCard">
                         <strong>クレジットカード情報を保存する</strong>
@@ -228,12 +228,12 @@
                 </div>
             </div>
 
-            <div *ngIf="creditCardType === 'registered'" class="credit-registered mb-small">
-                <ul class="box radius bg-light-gray mb-large credit form-layout">
+            <div *ngIf="creditCardType === 'registered'" class="credit-registered mb-2">
+                <ul class="p-3 rounded bg-light-gray mb-4 credit form-layout">
                     <li class="price">
                         <dl>
                             <dt>ご利用金額</dt>
-                            <dd class="large-text red-text">
+                            <dd class="text-large text-danger">
                                 <strong>￥{{ purchase.getTotalPrice() }}</strong>
                             </dd>
                         </dl>
@@ -270,7 +270,7 @@
                 <div class="mb-x-small">
                     <strong>ご注意事項</strong>
                 </div>
-                <p class="small-x-text">
+                <p class="text-small">
                     購入完了画面まで進まずにお取引を中断された場合でもご利用のカードによっては下記の事象が起こることがございますので、悪しからずご了承ください。
                     <br>
                     <strong>一部のクレジットカード会社からはカード利用速報のメールが配信される。</strong>
@@ -291,11 +291,11 @@
 <app-loading [show]="isLoading"></app-loading>
 
 <app-modal class="security-code-modal" [open]="securityCodeModal" [layout]="false" (close)="securityCodeModal = false">
-    <div inner class="box radius bg-white">
+    <div inner class="p-3 rounded bg-white">
         <div class="modal-title mb-xx-small text-center">セキュリティーコードについて</div>
-        <p class="mb-middle small-x-text text-center">※カード会社により表示箇所および名称が異なります。</p>
-        <div class="box radius bg-light-gray">
-            <dl class="mb-middle">
+        <p class="mb-3 text-small text-center">※カード会社により表示箇所および名称が異なります。</p>
+        <div class="p-3 rounded bg-light-gray">
+            <dl class="mb-3">
                 <dt>
                     <strong>VISA / MASTER / DINERS / JCBの場合</strong>
                 </dt>
@@ -318,8 +318,8 @@
 </app-modal>
 
 <app-modal [open]="creditCardAlertModal" [layout]="true" (close)="creditCardAlertModal = false">
-    <div class="modal-title large-text text-center mb-middle">
+    <div class="modal-title text-large text-center mb-3">
         <strong>エラーが発生しました</strong>
     </div>
-    <p class="text-center">クレジットカード情報を確認してください。</p>
+    <p class="text-left text-md-center">クレジットカード情報を確認してください。</p>
 </app-modal>
