--- a/src/client/app/modules/purchase/components/pages/purchase-mg-input/purchase-mg-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-mg-input/purchase-mg-input.component.html
@@ -1,15 +1,15 @@
-<div class="contents">
-    <h1 class="page-ttl">CSチケット認証</h1>
-    <p class="read">ご利用になるCSチケットの購入番号と、暗証番号を入力してください。
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3">CSチケット認証</h1>
+    <p class="text-left text-md-center">ご利用になるCSチケットの購入番号と、暗証番号を入力してください。
         <br>複数枚ご利用になる場合は「CSチケットを追加」ボタンを押して追加してください。</p>
 
-    <div *ngFor="let mvtkForm of forms; let index = index" class="ticket-list mb-middle">
+    <div *ngFor="let mvtkForm of forms; let index = index" class="ticket-list mb-3">
         <form [formGroup]="mvtkForm">
-            <div class="mvtk-box">
+            <div class="mvtk-p-3">
                 <div *ngIf="forms.length > 1" class="button light-gray-button remove-button">
                     <a (click)="removeTicket(index)">削除</a>
                 </div>
-                <ul class="box radius bg-light-gray mb-small form-layout">
+                <ul class="p-3 rounded bg-light-gray mb-2 form-layout">
                     <li>
                         <dl>
                             <dt>CSチケット購入番号</dt>
@@ -17,10 +17,10 @@
                                 <input class="mvtk-code" [class.validation]="mvtkForm.controls.code.invalid && mvtkForm.controls.code.touched" type="text" formControlName="code"
                                     autocomplete="off" placeholder="(例)012345789">
                                 <div *ngIf="mvtkForm.controls.code.invalid && mvtkForm.controls.code.touched">
-                                    <div *ngIf="mvtkForm.controls.code.errors?.required" class="validation-text">CSチケット購入番号が未入力です</div>
-                                    <div *ngIf="mvtkForm.controls.code.errors?.maxlength" class="validation-text">CSチケット購入番号は{{ mvtkForm.controls.code.errors?.maxlength.requiredLength }}文字で入力してください</div>
-                                    <div *ngIf="mvtkForm.controls.code.errors?.minlength" class="validation-text">CSチケット購入番号は{{ mvtkForm.controls.code.errors?.minlength.requiredLength }}文字で入力してください</div>
-                                    <div *ngIf="mvtkForm.controls.code.errors?.pattern" class="validation-text">CSチケット購入番号は英数字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.code.errors?.required" class="text-danger">CSチケット購入番号が未入力です</div>
+                                    <div *ngIf="mvtkForm.controls.code.errors?.maxlength" class="text-danger">CSチケット購入番号は{{ mvtkForm.controls.code.errors?.maxlength.requiredLength }}文字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.code.errors?.minlength" class="text-danger">CSチケット購入番号は{{ mvtkForm.controls.code.errors?.minlength.requiredLength }}文字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.code.errors?.pattern" class="text-danger">CSチケット購入番号は英数字で入力してください</div>
                                 </div>
                             </dd>
                         </dl>
@@ -32,10 +32,10 @@
                                 <input [class.validation]="mvtkForm.controls.password.invalid && mvtkForm.controls.password.touched" type="password"
                                     formControlName="password" autocomplete="off" placeholder="(例)0123" >
                                 <div *ngIf="mvtkForm.controls.password.invalid && mvtkForm.controls.password.touched">
-                                    <div *ngIf="mvtkForm.controls.password.errors?.required" class="validation-text">CSチケット暗証番号が未入力です</div>
-                                    <div *ngIf="mvtkForm.controls.password.errors?.maxlength" class="validation-text">CSチケット暗証番号は{{ mvtkForm.controls.password.errors?.maxlength.requiredLength }}文字で入力してください</div>
-                                    <div *ngIf="mvtkForm.controls.password.errors?.minlength" class="validation-text">CSチケット暗証番号は{{ mvtkForm.controls.password.errors?.minlength.requiredLength }}文字で入力してください</div>
-                                    <div *ngIf="mvtkForm.controls.password.errors?.pattern" class="validation-text">CSチケット暗証番号は数字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.password.errors?.required" class="text-danger">CSチケット暗証番号が未入力です</div>
+                                    <div *ngIf="mvtkForm.controls.password.errors?.maxlength" class="text-danger">CSチケット暗証番号は{{ mvtkForm.controls.password.errors?.maxlength.requiredLength }}文字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.password.errors?.minlength" class="text-danger">CSチケット暗証番号は{{ mvtkForm.controls.password.errors?.minlength.requiredLength }}文字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls.password.errors?.pattern" class="text-danger">CSチケット暗証番号は数字で入力してください</div>
                                 </div>
                             </dd>
                         </dl>
@@ -45,18 +45,18 @@
         </form>
     </div>
 
-    <div *ngIf="purchase.data.tmpSeatReservationAuthorization?.object.acceptedOffer.length > forms.length" class="button dark-blue-button add-button mb-middle center-button">
+    <div *ngIf="purchase.data.tmpSeatReservationAuthorization?.object.acceptedOffer.length > forms.length" class="button dark-blue-button add-button mb-3 center-button">
         <a class="icon-add-white" (click)="addTicket()">CSチケットを追加</a>
     </div>
 
-    <div class="box radius bg-light-gray mb-small">
-        <div class="box-ttl">選択中の座席</div>
-        <div class="text-right large-text">
+    <div class="p-3 rounded bg-light-gray mb-2">
+        <div class="p-3-ttl">選択中の座席</div>
+        <div class="text-right text-large">
             <strong>{{ purchase.data.tmpSeatReservationAuthorization?.object.acceptedOffer.length }}席</strong>
         </div>
     </div>
 
-    <p class="small-x-text">※不足金額が発生した場合は別途クレジットカードにてお支払いいただきます。</p>
+    <p class="text-small">※不足金額が発生した場合は別途クレジットカードにてお支払いいただきます。</p>
 
     <form (ngSubmit)="onSubmit()">
         <app-buttons [disabled]="isLoading" nextLabel="認証する" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
@@ -65,17 +65,17 @@
 </div>
 
 <app-modal [open]="inputValidationModal" [layout]="true" (close)="inputValidationModal = false">
-    <div class="modal-title large-text text-center mb-middle">
+    <div class="modal-title text-large text-center mb-3">
         <strong>入力項目にエラーがあります</strong>
     </div>
-    <p class="text-center">入力項目をご確認ください。</p>
+    <p class="text-left text-md-center">入力項目をご確認ください。</p>
 </app-modal>
 
 <app-modal [open]="authErrorModal" [layout]="true" (close)="authErrorModal = false">
-    <div class="modal-title large-text text-center mb-middle">
+    <div class="modal-title text-large text-center mb-3">
         <strong>認証に失敗しました</strong>
     </div>
-    <p class="text-center">購入番号と暗証番号、もしくはCSチケットの対象作品を再度ご確認ください。</p>
+    <p class="text-left text-md-center">購入番号と暗証番号、もしくはCSチケットの対象作品を再度ご確認ください。</p>
 </app-modal>
 
 <app-loading [show]="isLoading"></app-loading>
