--- a/src/client/app/modules/purchase/components/pages/purchase-schedule/purchase-schedule.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-schedule/purchase-schedule.component.html
@@ -1,19 +1,19 @@
-<div class="contents">
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
 
-    <h1 class="page-ttl">スケジュール選択</h1>
-    <p class="read">こちらからチケットの購入をする事が出来ます。
+    <h1 class="text-center text-large font-weight-bold mb-3">スケジュール選択</h1>
+    <p class="text-left text-md-center">こちらからチケットの購入をする事が出来ます。
         <br>ご希望の鑑賞作品、鑑賞日時を選択してください。</p>
-    <div class="inquiry-buttons mb-middle">
+    <div class="inquiry-buttons mb-3">
         <div *ngFor="let theater of theaters" class="button blue-button center-button inquiry-button">
             <a
                 href="{{ environment.FRONTEND_ENDPOINT }}/inquiry/login?theater={{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
         </div>
     </div>
 
-    <div class="mb-middle">
+    <div class="mb-3">
         <dl>
             <dt class="mb-x-small">劇場</dt>
-            <dd class="mb-small">
+            <dd class="mb-2">
                 <select [(ngModel)]="conditions.theater" (change)="changeConditions()">
                     <option *ngFor="let theater of theaters" value="{{ theater.location.branchCode }}">
                         {{ theater.name.ja }}</option>
@@ -22,7 +22,7 @@
         </dl>
         <dl>
             <dt class="mb-x-small">会員ステータス</dt>
-            <dd class="mb-small">
+            <dd class="mb-2">
                 <select [(ngModel)]="conditions.member" (change)="changeConditions()">
                     <option [value]="false">非会員</option>
                     <option [value]="true">会員</option>
@@ -31,7 +31,7 @@
         </dl>
         <dl>
             <dt class="mb-x-small">鑑賞日</dt>
-            <dd class="mb-small">
+            <dd class="mb-2">
                 <select [(ngModel)]="conditions.date" (change)="changeConditions()">
                     <option *ngFor="let date of dateList" value="{{ date.value }}">{{ date.label }}</option>
                 </select>
