--- a/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.scss
+++ b/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.scss
@@ -1,83 +1,6 @@
-$tablet: 1024px;
-$mobile: 767px;
-.sp-text {
-    display: none;
-    @media screen and (max-width: $mobile){
-        display: inline;
-    }
-}
 
-.film-info {
-    background-color: #3e3a39;
-    color: #FFF;
-    padding: 20px;
-    @media screen and (max-width: $mobile) {
-        padding: 15px;
-    }
-    dl {
-        dt {
-            color: #f0e205;
-            margin-bottom: 10px;
-        }
-        dd {
-            color: #FFF;
-            padding: 0 0 10px;
-            margin-bottom: 10px;
-            &:last-child {
-                padding: 0;
-                margin: 0;
-                border: none;
-            }
-        }
-    }
-}
 
-.button-area {
-    margin: 30px auto 0;
-    @media screen and (max-width: $mobile){
-        width: auto;
-    }
-}
-.next-button {
-    width: 320px;
-    margin: 0 auto 40px;
-    @media screen and (max-width: $mobile){
-        width: auto;
-        margin: 0 0 40px;
-    }
-    a, button {
-        font-size: 18px;
-        font-weight: bold;
-        width: 320px;
-        padding: 22px 0;
-        @media screen and (max-width: $mobile){
-            width: 100%;
-        }
-        app-icon {
-            position: absolute;
-            top: 50%;
-            right: 20px;
-            margin-top: -7.5px;
-        }
-    }
-}
-.prev-button {
-    width: 320px;
-    margin: 0 auto;
-    @media screen and (max-width: $mobile){
-        width: auto;
-        margin: 0;
-    }
-    a, button {
-        font-size: 18px;
-        font-weight: bold;
-        width: 320px;
-        padding: 22px 0;
-        @media screen and (max-width: $mobile){
-            width: 100%;
-        }
-    }
-}
+
 .prev-link {
     text-align: center;
     a, button {
@@ -92,29 +15,12 @@ $mobile: 767px;
 
 .seat-types {
     ul {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        margin: -5px;
         li {
-            margin: 0;
-            width: 50%;
-            @media screen and (max-width: $mobile){
-                width: 100%;
-            }
-            .seat-type-inner {
-                display: flex;
-                align-items: center;
-                margin: 5px;
+            .border-gray {
                 border: 1px solid #989898;
-                padding: 10px;
             }
             .image {
                 width: 60px;
-                text-align: center;
-            }
-            .text {
-                padding: 0 10px;
             }
         }
         .seat-grand-class {
@@ -147,5 +53,59 @@ $mobile: 767px;
                 height: (56px / 2);
             }
         }
+    }
+}
+
+input[type=checkbox] {
+    opacity: 0;
+    margin: 0;
+    position: absolute;
+}
+label {
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;
+    display: inline-block;
+    margin-bottom: 10px;
+    &.validation {
+        border-color: transparent !important;
+        background-color: transparent !important;
+        &:before {
+            border-color: #C30D23 !important;
+            background-color: #ffe8eb !important;
+        }
+    }
+    &:before {
+        content: '';
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        margin-top: -10px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        background-color: #FFF;
+    }
+    &:after {
+        content: '';
+        width: 0;
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        margin-top: -10px;
+        background-image: url(/assets/images/icon/icon_check.svg);
+        background-size: 20px 20px;
+        
+    }
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+input:checked+label {
+    &:after {
+        width: 20px;
+        transition: width 0.1s;
     }
 }
