--- a/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.html
@@ -1,9 +1,9 @@
-<div class="contents">
-    <h1 class="page-ttl">券種選択</h1>
-    <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
+<div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
+    <h1 class="text-center text-large font-weight-bold mb-3">券種選択</h1>
+    <p class="text-left text-md-center">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 
     <div *ngIf="purchase.isUsedMovieTicket({ paymentMethodType: paymentMethodType.MovieTicket })"
-        class="box radius bg-ultra-light-gray mb-middle mvtk">
+        class="p-3 rounded bg-ultra-light-gray mb-3 mvtk">
         <dl class="d-table">
             <dt class="d-td">ムビチケ券を利用される方</dt>
             <dd class="d-td width-medium">
@@ -16,7 +16,7 @@
         </dl>
     </div>
     <div *ngIf="purchase.isUsedMovieTicket({ paymentMethodType: paymentMethodType.MGTicket })"
-        class="box radius bg-ultra-light-gray mb-middle mg">
+        class="p-3 rounded bg-ultra-light-gray mb-3 mg">
         <dl class="d-table">
             <dt class="d-td">CSチケットを利用される方</dt>
             <dd class="d-td width-medium">
@@ -30,7 +30,7 @@
     </div>
 
     <div *ngIf="user.isMember() && purchase.isUsedPoint() && purchase.data.pointTickets.length === 0"
-        class="box radius bg-ultra-light-gray mb-middle point">
+        class="p-3 rounded bg-ultra-light-gray mb-3 point">
         <dl class="d-table">
             <dt class="d-td">会員ポイントを利用される方</dt>
             <dd class="d-td width-medium">
@@ -43,7 +43,7 @@
         </dl>
     </div>
 
-    <ul class="box radius bg-light-gray mb-middle seats">
+    <ul class="p-3 rounded bg-light-gray mb-3 seats">
         <li *ngFor="let offer of offers">
             <dl class="d-table">
                 <dt class="d-td seat-code">{{ offer.seatNumber }}</dt>
@@ -61,25 +61,25 @@
         </li>
     </ul>
 
-    <div class="box radius bg-light-gray mb-large total">
-        <div class="text-right mb-small">
+    <div class="p-3 rounded bg-light-gray mb-4 total">
+        <div class="text-right mb-2">
             <div class="length mb-x-small">購入枚数
-                <strong class="red-text large-text">{{ offers.length }}枚</strong>
+                <strong class="text-danger text-large">{{ offers.length }}枚</strong>
             </div>
             <div class="price">合計金額
-                <strong class="red-text large-text">
+                <strong class="text-danger text-large">
                     <span>{{ totalPrice }}</span>円</strong>
             </div>
         </div>
-        <div class="border-bottom-dot mb-small"></div>
+        <div class="border-bottom-dot mb-2"></div>
         <!-- 4DX -->
-        <p *ngIf="is4DX(purchase.data.screeningEvent)" class="small-x-text mb-xx-small">
+        <p *ngIf="is4DX(purchase.data.screeningEvent)" class="text-small mb-xx-small">
             ※[４DXをご鑑賞のお客様へ]
             <br> ４DX®作品は「身長100cm未満の方は入場不可」「身長120cm未満のお子様は保護者同伴」の入場制限がありますので、ご注意くださいませ。
             <br> また、妊娠されている方、ご高齢の方、心臓・背中・腰・首などに障害のある方、特別な疾病のある方、乗り物酔いしやすい方、体調に不安のある方はご利用になれません。
             <br> 上映中のホットドリンク・アルコールはご遠慮ください。
         </p>
-        <p class="small-x-text">※メンバーズカード提示による割引やその他割引券などのご利用はできません。
+        <p class="text-small">※メンバーズカード提示による割引やその他割引券などのご利用はできません。
             <br>※車椅子席をご希望の方は、お手数ですが通常のお席をご購入の上、対象の劇場にご連絡ください。
             <br>※ムビチケ券によっては別途追加料金が発生する場合がありますのでご了承ください。
         </p>
@@ -91,7 +91,7 @@
 </div>
 
 <app-modal [open]="ticketsModal" [layout]="false" (close)="ticketsModal = false">
-    <ul inner class="not-layout box bg-light-gray">
+    <ul inner class="not-layout p-3 bg-light-gray">
         <li *ngFor="let ticket of salesMovieTickets" [class.disabled]="ticket.selected">
             <dl class="d-table">
                 <dt class="d-td">
@@ -100,10 +100,10 @@
                             {{ ticket.ticketName }} ￥{{ getSalseTicketPrice(ticket) }}
                         </strong>
                     </div>
-                    <p *ngIf="ticket.paymentMethodType === paymentMethodType.MovieTicket" class="small-x-text">
+                    <p *ngIf="ticket.paymentMethodType === paymentMethodType.MovieTicket" class="text-small">
                         ムビチケ購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}
                     </p>
-                    <p *ngIf="ticket.paymentMethodType === paymentMethodType.MGTicket" class="small-x-text">
+                    <p *ngIf="ticket.paymentMethodType === paymentMethodType.MGTicket" class="text-small">
                         CSチケット購入番号 {{ ticket.knyknrNoInfo.knyknrNo }}
                     </p>
                 </dt>
@@ -120,7 +120,7 @@
                     <div class="mb-xx-small">
                         <strong>{{ ticket.ticketName }} ￥{{ getSalseTicketPrice(ticket) }}</strong>
                     </div>
-                    <p class="small-x-text">{{ ticket.ticketNote }}</p>
+                    <p class="text-small">{{ ticket.ticketNote }}</p>
                 </dt>
                 <dd class="d-td width-small">
                     <div class="button blue-button ticket-type-select">
@@ -135,7 +135,7 @@
                     <div class="mb-xx-small">
                         <strong>{{ ticket.ticketName }} ￥{{ getSalseTicketPrice(ticket) }}</strong>
                     </div>
-                    <p class="small-x-text">{{ ticket.ticketNote }}</p>
+                    <p class="text-small">{{ ticket.ticketNote }}</p>
                 </dt>
                 <dd class="d-td width-small">
                     <div class="button blue-button ticket-type-select">
@@ -148,17 +148,17 @@
 </app-modal>
 
 <app-modal [open]="notSelectModal" [layout]="true" (close)="notSelectModal = false">
-    <div class="modal-title large-text text-center mb-middle">
+    <div class="modal-title text-large text-center mb-3">
         <strong>券種が未選択です</strong>
     </div>
-    <p class="text-center">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
+    <p class="text-left text-md-center">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 </app-modal>
 
 <app-modal [open]="discountConditionsModal" [layout]="true" (close)="discountConditionsModal = false">
-    <div class="modal-title large-text text-center mb-middle">
+    <div class="modal-title text-large text-center mb-3">
         <strong>割引条件が満たされていません</strong>
     </div>
-    <p class="text-center">選択した券種の中に、割引券が含まれています。
+    <p class="text-left text-md-center">選択した券種の中に、割引券が含まれています。
         <br> 割引券の適用条件を再度ご確認ください。
     </p>
 </app-modal>
