--- a/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.scss
+++ b/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.scss
@@ -1,23 +1,15 @@
-$tablet: 1024px;
-$mobile: 767px;
+
 .seat-info {
-    padding: 0 20px 20px;
-    @media screen and (max-width: $mobile) {
-        padding: 0 20px 10px;
-    }
-    .box {
-        display: flex;
-        justify-content: center;
-        @media screen and (max-width: $mobile) {
+    .justify-content-center {
+        @media screen and (max-width: 767px) {
             flex-wrap: wrap;
-            padding: 10px 20px;
         }
     }
     .seat {
         margin: 0 10px;
         position: relative;
         padding-left: 24px;
-        @media screen and (max-width: $mobile) {
+        @media screen and (max-width: 767px) {
             width: 50%;
             font-size: 12px;
             margin: 10px 0;
