--- a/src/client/app/modules/shared/components/parts/footer/footer.component.html
+++ b/src/client/app/modules/shared/components/parts/footer/footer.component.html
@@ -1,9 +1,7 @@
-<footer class="footer">
-    <div class="inner">
-        <ul class="clearfix">
-            <li><a href="{{ environment.PORTAL_SITE_URL }}/privacy/" target="_blank">プライバシーポリシー</a></li>
-            <li><a href="{{ environment.PORTAL_SITE_URL }}/law/" target="_blank">特定商取引法に基づく表記</a></li>
-        </ul>
-        <div class="copyright">Copyright (C) 2001-2017 Cinema Sunshine Co., Ltd. All Rights Reserved.</div>
-    </div>
+<footer class="footer px-2 py-3 p-md-4 text-small rounded-bottom">
+    <ul class="text-center mb-2">
+        <li class="d-inline-block px-1 border-right border-white"><a class="text-white" href="{{ environment.PORTAL_SITE_URL }}/privacy/" target="_blank">プライバシーポリシー</a></li>
+        <li class="d-inline-block px-1"><a class="text-white" href="{{ environment.PORTAL_SITE_URL }}/law/" target="_blank">特定商取引法に基づく表記</a></li>
+    </ul>
+    <div class="text-center text-white">Copyright (C) 2001-2017 Cinema Sunshine Co., Ltd. All Rights Reserved.</div>
 </footer>
