--- a/src/client/app/modules/shared/components/parts/screen/screen.component.html
+++ b/src/client/app/modules/shared/components/parts/screen/screen.component.html
@@ -1,8 +1,8 @@
-<div class="radius bg-light-gray">
+<div class="rounded bg-light-gray">
     <div class="screen" [class.zoom]="zoomState" style="visibility: visible;" (window:resize)="resize()">
         <div [class.active]="zoomState" class="zoom-btn text-center" (click)="scaleDown()">
             <app-icon iconName="zoom-out" width="15" height="15"></app-icon>
-            <div class="small-x-text" href="#">ズーム
+            <div class="text-small" href="#">ズーム
                 <br>解除</div>
         </div>
         <div *ngIf="data" class="screen-scroll" 
