--- a/src/client/app/modules/shared/components/parts/site-seal/site-seal.component.html
+++ b/src/client/app/modules/shared/components/parts/site-seal/site-seal.component.html
@@ -1,6 +1,6 @@
 <div class="site-seal d-table">
     <div class="d-td">
-        <p class="small-x-text">
+        <p class="text-small">
             この画面は、高いセキュリティでプライバシーを保護する為に、SSL暗号化通信を採用しています。
         </p>
     </div>
